--- a/css/main.scss
+++ b/css/main.scss
@@ -205,7 +205,7 @@ section {
 
     .skills-container ul {
         display: grid;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat([3],auto);
         grid-gap: 1em;
     }
 
